--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Top Drawer</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
     <div id="app"></div>
